--- a/src/app/templates/ReportTemplate.html
+++ b/src/app/templates/ReportTemplate.html
@@ -3,53 +3,57 @@
 </a>
 <div id="broadband" class='collapse in'>
     <h4 class='broadband'>Fiber Providers</h4>
-    <table class='table'>
-        <thead>
-            <tr>
-                <th>Provider</th>
-                <th>Web Site</th>
-                <th>Providing Fiber in:</th>
-                <th>Contact Name</th>
-                <th>Contact Phone</th>
-                <th>Contact Email</th>
-            </tr>
-        </thead>
-        <tbody>
-            {{#each broadband.fiber}}
-            <tr>
-                <td>{{Colloquial}}</td>
-                <td><a href="{{URL}}">{{URL}}</a></td>
-                <td>{{ServiceClass}}</td>
-                <td>{{ContactName}}</td>
-                <td>{{ContactPhone}}</td>
-                <td><a href='mailto:{{ContactEmail}}'>{{ContactEmail}}</a></td>
-            </tr>
-            {{/each}}
-        </tbody>
-    </table>
+    <div class="table-responsive">
+        <table class='table table-striped'>
+            <thead>
+                <tr>
+                    <th>Provider</th>
+                    <th>Web Site</th>
+                    <th>Providing Fiber in:</th>
+                    <th>Contact Name</th>
+                    <th>Contact Phone</th>
+                    <th>Contact Email</th>
+                </tr>
+            </thead>
+            <tbody>
+                {{#each broadband.fiber}}
+                <tr>
+                    <td>{{Colloquial}}</td>
+                    <td><a href="{{URL}}">{{URL}}</a></td>
+                    <td>{{ServiceClass}}</td>
+                    <td>{{ContactName}}</td>
+                    <td>{{ContactPhone}}</td>
+                    <td><a href='mailto:{{ContactEmail}}'>{{ContactEmail}}</a></td>
+                </tr>
+                {{/each}}
+            </tbody>
+        </table>
+    </div>
     <h4 class="broadband">Other Fixed Broadband Providers</h4>
-    <table class='table'>
-        <thead>
-            <tr>
-                <th>Provider</th>
-                <th>Web Site</th>
-                <th>Contact Name</th>
-                <th>Contact Phone</th>
-                <th>Contact Email</th>
-            </tr>
-        </thead>
-        <tbody>
-            {{#each broadband.fixed}}
-            <tr>
-                <td>{{Colloquial}}</td>
-                <td><a href="#">{{URL}}</a></td>
-                <td>{{ContactName}}</td>
-                <td>{{ContactPhone}}</td>
-                <td><a mailto:'{{ContactEmail}}'>{{ContactEmail}}</a></td>
-            </tr>
-            {{/each}}
-        </tbody>
-    </table>
+    <div class="table-responsive">
+        <table class='table table-striped'>
+            <thead>
+                <tr>
+                    <th>Provider</th>
+                    <th>Web Site</th>
+                    <th>Contact Name</th>
+                    <th>Contact Phone</th>
+                    <th>Contact Email</th>
+                </tr>
+            </thead>
+            <tbody>
+                {{#each broadband.fixed}}
+                <tr>
+                    <td>{{Colloquial}}</td>
+                    <td><a href="#">{{URL}}</a></td>
+                    <td>{{ContactName}}</td>
+                    <td>{{ContactPhone}}</td>
+                    <td><a mailto:'{{ContactEmail}}'>{{ContactEmail}}</a></td>
+                </tr>
+                {{/each}}
+            </tbody>
+        </table>
+    </div>
 </div>
 
 <a href="#utilities" data-toggle="collapse">
@@ -57,135 +61,95 @@
 </a>
 <div class="collapse" id="utilities">
     <h4 class="utilities">Local Exchange Areas</h4>
-    <table class='table'>
-        <thead>
-            <tr>
-                <th>Provider</th>
-                <!-- <th>Phone</th> -->
-                <!-- <th>City</th> -->
-                <!-- <th>Email</th> -->
-                <th>Web Site</th>
-            </tr>
-        </thead>
-        <tbody>
-            {{#each utilities.rural}}
-            <tr>
-                <td>{{PROVIDER}}</td>
-                <!-- <td>801-111-1234</td> -->
-                <!-- <td>Taylorsville</td> -->
-                <!-- <td><a href="#">email@company.com</a></td> -->
-                <td><a href="#">{{WEBLINK}}</a></td>
-            </tr>
-            {{/each}}
-        </tbody>
-    </table>
+    <div class="table-responsive">
+        <table class='table table-striped'>
+            <thead>
+                <tr>
+                    <th>Provider</th>
+                    <!-- <th>Phone</th> -->
+                    <!-- <th>City</th> -->
+                    <!-- <th>Email</th> -->
+                    <th>Web Site</th>
+                </tr>
+            </thead>
+            <tbody>
+                {{#each utilities.rural}}
+                <tr>
+                    <td>{{PROVIDER}}</td>
+                    <!-- <td>801-111-1234</td> -->
+                    <!-- <td>Taylorsville</td> -->
+                    <!-- <td><a href="#">email@company.com</a></td> -->
+                    <td><a href="#">{{WEBLINK}}</a></td>
+                </tr>
+                {{/each}}
+            </tbody>
+        </table>
+    </div>
     <h4 class="utilities">Electric Utility Territory</h4>
-    <table class='table'>
-        <thead>
-            <tr>
-                <th>Provider</th>
-                <!-- <th>Phone</th> -->
-                <!-- <th>City</th> -->
-                <!-- <th>Email</th> -->
-                <th>Web Site</th>
-            </tr>
-        </thead>
-        <tbody>
-            {{#each utilities.electrical}}
-            <tr>
-                <td>{{PROVIDER}}</td>
-                <!-- <td>801-111-1234</td> -->
-                <!-- <td>Taylorsville</td> -->
-                <!-- <td><a href="#">email@company.com</a></td> -->
-                <td><a href="#">{{WEBLINK}}</a></td>
-            </tr>
-            {{/each}}
-        </tbody>
-    </table>
-    <table class='table'>
-        <tbody>
-            <td>
-                Natural gas service: 
-                <strong>
-                    {{#if utilities.natural_gas}}
-                    <a href='https://www.questargas.com/'>Questar Gas (https://www.questargas.com/)</a>
-                    {{else}}
-                    Unknown
-                    {{/if}}
-                </strong>
-            </td>
-        </tbody>
-    </table>
+    <div class="table-responsive">
+        <table class='table table-striped'>
+            <thead>
+                <tr>
+                    <th>Provider</th>
+                    <!-- <th>Phone</th> -->
+                    <!-- <th>City</th> -->
+                    <!-- <th>Email</th> -->
+                    <th>Web Site</th>
+                </tr>
+            </thead>
+            <tbody>
+                {{#each utilities.electrical}}
+                <tr>
+                    <td>{{PROVIDER}}</td>
+                    <!-- <td>801-111-1234</td> -->
+                    <!-- <td>Taylorsville</td> -->
+                    <!-- <td><a href="#">email@company.com</a></td> -->
+                    <td><a href="#">{{WEBLINK}}</a></td>
+                </tr>
+                {{/each}}
+            </tbody>
+        </table>
+    </div>
+    <div class="table-responsive">
+        <table class='table table-striped'>
+            <tbody>
+                <td>
+                    Natural gas service: 
+                    <strong>
+                        {{#if utilities.natural_gas}}
+                        <a href='https://www.questargas.com/'>Questar Gas (https://www.questargas.com/)</a>
+                        {{else}}
+                        Unknown
+                        {{/if}}
+                    </strong>
+                </td>
+            </tbody>
+        </table>
+    </div>
 </div>
 
 <a href="#transportation" data-toggle="collapse">
     <h3 class="transportation">Transportation</h3>
 </a>
 <div id="transportation" class="collapse">
-    <h4 class="transportation">Major Roads, Freeways, US Highways and State Highways within 5 Miles</h4>
-    <table class='table'>
-        <thead>
-            <tr>
-                <th>Name</th>
-            </tr>
-        </thead>
-        <tbody>
-            {{#each transportation.roads}}
-            <tr>
-                <td>{{.}}</td>
-            </tr>
-            {{/each}}
-        </tbody>
-    </table>
-    <h4 class="transportation">Airports - International</h4>
-    <table class='table'>
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Drive Time</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>{{transportation.airports.sl.name}}</td>
-                <td>{{transportation.airports.sl.drive_time}}</td>
-            </tr>
-        </tbody>
-    </table>
-    <h4 class="transportation">Airports - Regional/Commercial</h4>
-    <table class='table'>
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Drive Time</th>
-            </tr>
-        </thead>
-        <tbody>
-            {{#each transportation.airports.regional_commercial}}
-            <tr>
-                <td>{{name}}</td>
-                <td>{{drive_time}}</td>
-            </tr>
-            {{/each}}
-        </tbody>
-    </table>
-    <h4 class="transportation">Airports - Local</h4>
-    <table class='table'>
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Drive Time</th>
-            </tr>
-        </thead>
-        <tbody>
-            {{#each transportation.airports.local}}
-            <tr>
-                <td>{{name}}</td>
-                <td>{{drive_time}}</td>
-            </tr>
-            {{/each}}
-        </tbody>
-    </table>
+    <div class="table-responsive">
+        <table class='table table-striped'>
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Drive Time</th>
+                </tr>
+            </thead>
+            <tbody>
+                {{#each transportation.airports.local}}
+                <tr>
+                    <td>{{name}}</td>
+                    <td>{{drive_time}}</td>
+                </tr>
+                {{/each}}
+            </tbody>
+        </table>
+    </div>
 </div>
 
 <a href="#demographics" data-toggle="collapse">
@@ -193,76 +157,84 @@
 </a>
 <div id="demographics" class="collapse">
     <h4 class="demographics">Higher Education Schools</h4>
-    <table class='table'>
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Drive Time</th>
-            </tr>
-        </thead>
-        <tbody>
-            {{#each workforce.schools}}
-            <tr>
-                <td>{{name}}</td>
-                <td>{{drive_time}}</td>
-            </tr>
-            {{/each}}
-        </tbody>
-    </table>
+    <div class="table-responsive">
+        <table class='table table-striped'>
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Drive Time</th>
+                </tr>
+            </thead>
+            <tbody>
+                {{#each workforce.schools}}
+                <tr>
+                    <td>{{name}}</td>
+                    <td>{{drive_time}}</td>
+                </tr>
+                {{/each}}
+            </tbody>
+        </table>
+    </div>
 
     <h4 class="demographics">Top 10 County Industries</h4>
-    <table class="table">
-        <tbody>
-            {{#each workforce.county_demographics.topten}}
-            <tr>
-                <td>{{rank}}</td>
-                <td>{{desc}}</td>
-            </tr>
-            {{/each}}
-        </tbody>
-    </table>
+    <div class="table-responsive">
+        <table class="table table-striped">
+            <tbody>
+                {{#each workforce.county_demographics.topten}}
+                <tr>
+                    <td>{{rank}}</td>
+                    <td>{{desc}}</td>
+                </tr>
+                {{/each}}
+            </tbody>
+        </table>
+    </div>
 
     <h4 class="demographics">County Demographics</h4>
-    <table class="table">
-        <tbody>
-            <tr>
-                <td>Median Age</td>
-                <td>{{workforce.county_demographics.Median_Age}}</td>
-            </tr>
-            <tr>
-                <td>High School Graduates (Age 25 or Higher)</td>
-                <td>{{workforce.county_demographics.educationHighSchoolGraduate}}%</td>
-            </tr>
-            <tr>
-                <td>Bachelor's Degree or Greater (Age 25 or Higher)</td>
-                <td>{{workforce.county_demographics.educationBachelorOrGreater}}%</td>
-            </tr>
-            <tr>
-                <td>Average Household Monthly Income</td>
-                <td>${{workforce.county_demographics.Avg_MonthlyIncome}}</td>
-            </tr>
-            <tr>
-                <td>Average Household Annual Income</td>
-                <td>${{workforce.county_demographics.Avg_HouseIncome}}</td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="table-responsive">
+        <table class="table table-striped">
+            <tbody>
+                <tr>
+                    <td>Median Age</td>
+                    <td>{{workforce.county_demographics.Median_Age}}</td>
+                </tr>
+                <tr>
+                    <td>High School Graduates (Age 25 or Higher)</td>
+                    <td>{{workforce.county_demographics.educationHighSchoolGraduate}}%</td>
+                </tr>
+                <tr>
+                    <td>Bachelor's Degree or Greater (Age 25 or Higher)</td>
+                    <td>{{workforce.county_demographics.educationBachelorOrGreater}}%</td>
+                </tr>
+                <tr>
+                    <td>Average Household Monthly Income</td>
+                    <td>${{workforce.county_demographics.Avg_MonthlyIncome}}</td>
+                </tr>
+                <tr>
+                    <td>Average Household Annual Income</td>
+                    <td>${{workforce.county_demographics.Avg_HouseIncome}}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <td>Within an enterprise zone?
-                    <b>
-                        {{#if workforce.enterprise_zone}}
-                        Yes
-                        {{else}}
-                        No
-                        {{/if}}
-                    </b>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="table-responsive">
+        <table class="table table-striped">
+            <tbody>
+                <tr>
+                    <td>Within an enterprise zone?
+                        <b>
+                            {{#if workforce.enterprise_zone}}
+                            Yes
+                            {{else}}
+                            No
+                            {{/if}}
+                        </b>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
 
 <a href='#lifestyle' data-toggle='collapse'>
@@ -270,55 +242,61 @@
 </a>
 <div id="lifestyle" class="collapse">
     <h4 class="lifestyle">National Parks</h4>
-    <table class='table'>
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Drive Time</th>
-            </tr>
-        </thead>
-        <tbody>
-            {{#each recreation.nat_parks}}
-            <tr>
-                <td>{{name}}</td>
-                <td>{{drive_time}}</td>
-            </tr>
-            {{/each}}
-        </tbody>
-    </table>
+    <div class="table-responsive">
+        <table class='table table-striped'>
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Drive Time</th>
+                </tr>
+            </thead>
+            <tbody>
+                {{#each recreation.nat_parks}}
+                <tr>
+                    <td>{{name}}</td>
+                    <td>{{drive_time}}</td>
+                </tr>
+                {{/each}}
+            </tbody>
+        </table>
+    </div>
     
     <h4 class="lifestyle">State Parks</h4>
-    <table class='table'>
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Drive Time</th>
-            </tr>
-        </thead>
-        <tbody>
-            {{#each recreation.state_parks}}
-            <tr>
-                <td>{{name}}</td>
-                <td>{{drive_time}}</td>
-            </tr>
-            {{/each}}
-        </tbody>
-    </table>
+    <div class="table-responsive">
+        <table class='table table-striped'>
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Drive Time</th>
+                </tr>
+            </thead>
+            <tbody>
+                {{#each recreation.state_parks}}
+                <tr>
+                    <td>{{name}}</td>
+                    <td>{{drive_time}}</td>
+                </tr>
+                {{/each}}
+            </tbody>
+        </table>
+    </div>
     <h4 class="lifestyle">Ski Resorts</h4>
-    <table class='table'>
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Drive Time</th>
-            </tr>
-        </thead>
-        <tbody>
-            {{#each recreation.ski}}
-            <tr>
-                <td>{{name}}</td>
-                <td>{{drive_time}}</td>
-            </tr>
-            {{/each}}
-        </tbody>
-    </table>
+    <div class="table-responsive">
+        <table class='table table-striped'>
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Drive Time</th>
+                </tr>
+            </thead>
+            <tbody>
+                {{#each recreation.ski}}
+                <tr>
+                    <td>{{name}}</td>
+                    <td>{{drive_time}}</td>
+                </tr>
+                {{/each}}
+            </tbody>
+        </table>
+    </div>
 </div>
