--- a/src/app/resources/CurrentLocation.css
+++ b/src/app/resources/CurrentLocation.css
@@ -35,10 +35,10 @@
     overflow: hidden;
 }
 
-@media only screen and (max-width: 765px) {
+@media only screen and (max-width: 1024px) {
     .current-location {
         width: 100%;
-        height: auto;
+        height: 96px;
         clear: both;
     }
     .current-location h4 {
