--- a/src/app/templates/App.html
+++ b/src/app/templates/App.html
@@ -5,15 +5,23 @@
             <a href="#" id="mobile-searchbutton" class="ir">Search</a> -->
             <span>GOED | Utah Business Relocation Map</span>
         </div>
-    
+
         <div id="header-wrapper" class="site-full">
             <div id="header" class="site">
                 <span id="broadband-logo" class="ir"></span>
                 <div data-dojo-attach-point="currentLocationDiv"></div>
+                <div class='contact pull-right'>
+                    <img src="app/resources/img/iphone.svg" alt="">
+                    <div class="clearfix"></div>
+                    <p>Requests? Questions?
+                        <br>
+                        <span>801-538-8831</span>
+                    </p>
+                </div>
             </div>
         </div>
     </div>
-    
+
     <div class="site-full clearfix">
         <div class="site-full" data-dojo-attach-point='mapContainer'>
             <div data-dojo-attach-point="mapDiv" class='map'></div>
@@ -23,34 +31,25 @@
             </div>
         </div>
     </div>
-    
+
     <div id="footer-wrapper" class="site-full">
+        <div class="contact hidden">
+            <p>Requests? Questions?
+                <br>
+                <span>801-538-8831</span>
+            </p>
+        </div>
         <div id="footer" class="site">
-            <div id="goed-logo" class="pull-left"></div>
-            <div class="col35 pull-left">
-                <p>Governor's Office of Economic Development (GOED)</p>
-                <div class="col pull-left">
-                    <address>
-                        271 West Bitterbrush Lane
-                        <br /> Salt Lake City, Utah 84020
-                    </address>
-                </div>
-    
-                <div class="col pull-right">
-                    <p>Phone: (801) 571-0900
-                        <br /> Email: <a href="mailto:broadband@utah.gov">broadband@utah.gov</a>
-                    </p>
-                </div>
-                <div class="clearfix"></div>
-            </div>
-    
+            <a href="http://edcutah.org" id="edcLogo" class="ir" target='_blank'>Economic Development Corporation of Utah</a>
+            <a href="http://goed.utah.gov" id="goedLogo" class="ir" target='_blank'>Governor's Office of Economic Development</a>
+
             <div class="col20 pull-right">
                 <ul>
-                    <li><a href="http://www.utah.gov/main/index">Utah.gov</a></li>
-                    <li><a href="http://www.utah.gov/disclaimer.html">Terms of Use</a></li>
-                    <li><a href="http://www.utah.gov/privacypolicy.html">Privacy Policy</a></li>
-                    <li><a href="http://www.utah.gov/accessibility.html">Accessibility Policy</a></li>
-                    <li><a href="http://www.utah.gov/translate.html">Translate</a></li>
+                    <li><a href="http://www.utah.gov/main/index" target='_blank'>Utah.gov</a></li>
+                    <li><a href="http://www.utah.gov/disclaimer.html" target='_blank'>Terms of Use</a></li>
+                    <li><a href="http://www.utah.gov/privacypolicy.html" target='_blank'>Privacy Policy</a></li>
+                    <li><a href="http://www.utah.gov/accessibility.html" target='_blank'>Accessibility Policy</a></li>
+                    <li><a href="http://www.utah.gov/translate.html" target='_blank'>Translate</a></li>
                 </ul>
             </div>
             <div class="clearfix"></div>
