Added sure sites logo
Closes #6

--- a/src/app/templates/App.html
+++ b/src/app/templates/App.html
@@ -18,6 +18,10 @@
                         <span>801-538-8831</span>
                     </p>
                 </div>
+                <div class="suresites pull-right">
+                    <p>Site Details</p>
+                    <a href='http://utahsuresites.com' class='suresitesLogo ir' target="_blank">Sure Sites</a>
+                </div>
             </div>
         </div>
     </div>
@@ -41,7 +45,8 @@
         </div>
         <div id="footer" class="site">
             <a href="http://edcutah.org" id="edcLogo" class="ir" target='_blank'>Economic Development Corporation of Utah</a>
-            <a href="http://goed.utah.gov" id="goedLogo" class="ir" target='_blank'>Governor's Office of Economic Development</a>
+            <a href="http://goed.utah.gov" id="goedLogo" class="ir" target='_blank'>Governor's Office of Economic Development</a>       
+            <a href='http://utahsuresites.com' class='ir suresitesLogo hidden' target="_blank">Sure Sites</a>      
 
             <div class="col20 pull-right">
                 <ul>
