--- a/src/app/resources/App.css
+++ b/src/app/resources/App.css
@@ -122,13 +122,7 @@ body {
     height: 70px;
     float: left;
     background-size: contain;
-    margin-top: 15px;
-}
-#suresitesLogo{
-    background:url(img/suresites.png) no-repeat top left;
-    width: 110px;
-    height: 90px;
-    float:left;
+    margin-top: 20px;
 }
 #edcLogo {
     background:url(img/edc.png) no-repeat top left;
@@ -140,10 +134,17 @@ body {
     background:url(img/goed.png) no-repeat top left;
     width: 284px;
     height: 90px;
-    float:left; margin-left:25px;
+    float:left;
+    margin-left:25px;
 }
 #header-container #mobilemenu {
     display: none;
+}
+.suresitesLogo {
+    background:url(img/suresites.png) no-repeat top left;
+    width: 110px;
+    height: 90px;
+    float:left;
 }
 .contact {
     background-color: #000;
@@ -152,6 +153,10 @@ body {
     padding: 10px;
     width: 220px;
     position: relative;
+}
+.suresites p {
+    text-align: center;
+    margin: 5px 0 0 0;
 }
 .contact span {
     color: #5AA7AB;
@@ -347,7 +352,7 @@ h4.demographics {
    ========================================================================== */
 /* == iPad/iPhone [portrait + landscape] == */
 
-@media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 1180px) {
     .col20 {
         width: 100%;
         display: block;
@@ -377,18 +382,24 @@ h4.demographics {
     .app .map .esriSimpleSlider {
         top: 80px;
     }
-    #header-container .contact {
+    #header-container .contact,
+    #header-container .suresites {
         display: none;
         visibility: hidden;
     }
     #footer-wrapper .contact {
         visibility: visible !important;
+        display: block !important;
         width: 100%;
         height: auto;
     }
     #footer-wrapper .contact p {
         position: inherit;
         margin: 0 10px;
+    }
+    #footer-wrapper .suresitesLogo {
+        visibility: visible !important;
+        display: block !important;
     }
 }
 @media only screen and (max-width: 600px) {
