Fiber legend tooltip
Closes #27

--- a/src/app/resources/custom-bootstrap.less
+++ b/src/app/resources/custom-bootstrap.less
@@ -18,6 +18,7 @@
 @import '../../bootstrap/less/type.less';
 @import '../../bootstrap/less/utilities.less';
 @import '../../bootstrap/less/variables.less';
+@import '../../bootstrap/less/tooltip.less';
 
 // @btn-default-bg: #E09525;
 @btn-primary-bg: #0C5D63;
