--- a/src/app/resources/Layer.css
+++ b/src/app/resources/Layer.css
@@ -21,6 +21,35 @@
 }
 
 
+/* LEGEND */
+.layer div[data-toggle='tooltip'] {
+    display: inline;
+}
+.legend td {
+    padding: 5px;
+}
+.legend .short {
+    background-color: #7F7F7F;
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
+}
+.legend .custom {
+    background-color: #999999;
+    border-bottom-left-radius: 2px;
+    border-bottom-right-radius: 2px;
+}
+.tooltip.in {
+    opacity: 1 !important;
+    filter: alpha(opacity=100) !important;
+}
+.tooltip .tooltip-inner {
+    background-color: #fff;
+    padding: 3px;
+}
+.tooltip.in .tooltip-arrow {
+    border-right-color: #fff !important;
+}
+
 .esriPopup .content .contentPane {
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
