--- a/src/app/templates/Layer.html
+++ b/src/app/templates/Layer.html
@@ -1,5 +1,10 @@
 <li class='checkbox'>
     <input type="checkbox" id='${id}_chbx'
         data-dojo-attach-point='checkbox' value='${layerId}'>
-    <label for='${id}_chbx' data-dojo-attach-point='label'>${name}</label>
+    <label for='${id}_chbx' data-dojo-attach-point='label'>
+        ${name}
+        <div data-dojo-attach-point='tooltip' data-toggle="tooltip" class='hidden'>
+            <span class="glyphicon glyphicon-question-sign"></span>
+        </div>
+    </label>
 </li>
