Add missing hrefs to other bb providers
Closes #55

--- a/src/app/templates/ReportTemplate.html
+++ b/src/app/templates/ReportTemplate.html
@@ -45,7 +45,7 @@
                 {{#each broadband.fixed}}
                 <tr>
                     <td>{{Colloquial}}</td>
-                    <td><a href="#">{{URL}}</a></td>
+                    <td><a href="{{URL}}">{{URL}}</a></td>
                     <td>{{ContactName}}</td>
                     <td>{{ContactPhone}}</td>
                     <td><a mailto:'{{ContactEmail}}'>{{ContactEmail}}</a></td>
@@ -114,7 +114,7 @@
         <table class='table table-striped'>
             <tbody>
                 <td>
-                    Natural gas service: 
+                    Natural gas service:
                     <strong>
                         {{#if utilities.natural_gas}}
                         <a href='https://www.questargas.com/'>Questar Gas (https://www.questargas.com/)</a>
@@ -187,7 +187,7 @@
             </tbody>
         </table>
     </div>
-    
+
     <h4 class="transportation">Airports - Local</h4>
     <div class="table-responsive">
         <table class='table table-striped'>
@@ -317,7 +317,7 @@
             </tbody>
         </table>
     </div>
-    
+
     <h4 class="lifestyle">State Parks</h4>
     <div class="table-responsive">
         <table class='table table-striped'>
