Switch to 1 mile roads buffer
Closes #57

--- a/src/app/templates/ReportTemplate.html
+++ b/src/app/templates/ReportTemplate.html
@@ -120,7 +120,7 @@
     <h3 class="transportation">Transportation</h3>
 </a>
 <div id="transportation" class="collapse">
-    <h4 class="transportation">Major Roads, Freeways, US Highways and State Highways within 5 Miles</h4>
+    <h4 class="transportation">Major Roads, Freeways, US Highways and State Highways within 1 Mile</h4>
     <div class="table-responsive">
         <table class='table table-striped'>
             <thead>
