Disabled/removed enterprise zones
Closes #53

--- a/src/app/templates/ReportTemplate.html
+++ b/src/app/templates/ReportTemplate.html
@@ -263,7 +263,7 @@
         </table>
     </div>
 
-    <div class="table-responsive">
+    <!-- <div class="table-responsive">
         <table class="table table-striped">
             <tbody>
                 <tr>
@@ -279,7 +279,7 @@
                 </tr>
             </tbody>
         </table>
-    </div>
+    </div> -->
 </div>
 
 <a href='#lifestyle' data-toggle='collapse'>
