Update broadband popup legend and report data
Closes #49

--- a/src/app/templates/FiberLegend.html
+++ b/src/app/templates/FiberLegend.html
@@ -1,8 +1,8 @@
 <table class='legend'>
     <tr>
-        <td class='short'>Short Term</td>
+        <td class='short'>Short Term (1-3 month avg)</td>
     </tr>
     <tr>
-        <td class='custom'>Custom Order</td>
+        <td class='custom'>Custom Order (3-9 month avg)</td>
     </tr>
 </table>
