Switch legend icon from "?" to "i" icon
Closes #45

--- a/src/app/templates/Layer.html
+++ b/src/app/templates/Layer.html
@@ -4,7 +4,7 @@
     <label for='${id}_chbx' data-dojo-attach-point='label'>
         ${name}
         <div data-dojo-attach-point='tooltip' data-toggle="tooltip" class='hidden'>
-            <span class="glyphicon glyphicon-question-sign"></span>
+            <span class="glyphicon glyphicon-info-sign"></span>
         </div>
     </label>
 </li>
