Sure Sites/Contact redesign
Closes #48

--- a/src/app/templates/App.html
+++ b/src/app/templates/App.html
@@ -11,16 +11,9 @@
                 <span id="broadband-logo" class="ir"></span>
                 <div data-dojo-attach-point="currentLocationDiv"></div>
                 <div class='contact pull-right'>
-                    <img src="app/resources/img/iphone.svg" alt="">
-                    <div class="clearfix"></div>
-                    <p>Requests? Questions?
-                        <br>
-                        <span>801-538-8831</span>
-                    </p>
-                </div>
-                <div class="suresites pull-right">
-                    <p>Site Details</p>
                     <a href='http://utahsuresites.com' class='suresitesLogo ir' target="_blank">Sure Sites</a>
+                    <a href='tel:801-538-8831' class='expertLogo ir'
+                        title='801-538-8831'>Ask An Expert!</a>
                 </div>
             </div>
         </div>
@@ -37,16 +30,14 @@
     </div>
 
     <div id="footer-wrapper" class="site-full">
-        <div class="contact hidden">
-            <p>Requests? Questions?
-                <br>
-                <span>801-538-8831</span>
-            </p>
+        <div class='contact'>
+            <a href='http://utahsuresites.com' class='suresitesLogo ir' target="_blank">Sure Sites</a>
+            <a href='tel:801-538-8831' class='expertLogo ir'
+            title='801-538-8831'>Ask An Expert!</a>
         </div>
         <div id="footer" class="site">
             <a href="http://edcutah.org" id="edcLogo" class="ir" target='_blank'>Economic Development Corporation of Utah</a>
-            <a href="http://goed.utah.gov" id="goedLogo" class="ir" target='_blank'>Governor's Office of Economic Development</a>       
-            <a href='http://utahsuresites.com' class='ir suresitesLogo hidden' target="_blank">Sure Sites</a>      
+            <a href="http://goed.utah.gov" id="goedLogo" class="ir" target='_blank'>Governor's Office of Economic Development</a>
 
             <div class="col20 pull-right">
                 <ul>
