--- a/src/app/resources/App.css
+++ b/src/app/resources/App.css
@@ -65,25 +65,25 @@ body {
 #header-container #header-wrapper {
     background: rgb(209, 210, 211);
     /* Old browsers */
-    
+
     background: -moz-linear-gradient(top, rgba(209, 210, 211, 1) 0%, rgba(242, 243, 244, 1) 29%, rgba(242, 243, 244, 1) 67%, rgba(227, 229, 231, 1) 100%);
     /* FF3.6+ */
-    
+
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(209, 210, 211, 1)), color-stop(29%, rgba(242, 243, 244, 1)), color-stop(67%, rgba(242, 243, 244, 1)), color-stop(100%, rgba(227, 229, 231, 1)));
     /* Chrome,Safari4+ */
-    
+
     background: -webkit-linear-gradient(top, rgba(209, 210, 211, 1) 0%, rgba(242, 243, 244, 1) 29%, rgba(242, 243, 244, 1) 67%, rgba(227, 229, 231, 1) 100%);
     /* Chrome10+,Safari5.1+ */
-    
+
     background: -o-linear-gradient(top, rgba(209, 210, 211, 1) 0%, rgba(242, 243, 244, 1) 29%, rgba(242, 243, 244, 1) 67%, rgba(227, 229, 231, 1) 100%);
     /* Opera 11.10+ */
-    
+
     background: -ms-linear-gradient(top, rgba(209, 210, 211, 1) 0%, rgba(242, 243, 244, 1) 29%, rgba(242, 243, 244, 1) 67%, rgba(227, 229, 231, 1) 100%);
     /* IE10+ */
-    
+
     background: linear-gradient(to bottom, rgba(209, 210, 211, 1) 0%, rgba(242, 243, 244, 1) 29%, rgba(242, 243, 244, 1) 67%, rgba(227, 229, 231, 1) 100%);
     /* W3C */
-    
+
     filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#d1d2d3', endColorstr='#e3e5e7', GradientType=0);
     /* IE6-9 */
     /*box-shadow:inset 0 5px 5px -5px rgba(0,0,0, .4);*/
@@ -93,25 +93,25 @@ body {
     position: relative;
     background: rgb(209, 210, 211);
     /* Old browsers */
-    
+
     background: -moz-linear-gradient(top, rgba(209, 210, 211, 1) 0%, rgba(242, 243, 244, 1) 29%, rgba(242, 243, 244, 1) 67%, rgba(227, 229, 231, 1) 100%);
     /* FF3.6+ */
-    
+
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(209, 210, 211, 1)), color-stop(29%, rgba(242, 243, 244, 1)), color-stop(67%, rgba(242, 243, 244, 1)), color-stop(100%, rgba(227, 229, 231, 1)));
     /* Chrome,Safari4+ */
-    
+
     background: -webkit-linear-gradient(top, rgba(209, 210, 211, 1) 0%, rgba(242, 243, 244, 1) 29%, rgba(242, 243, 244, 1) 67%, rgba(227, 229, 231, 1) 100%);
     /* Chrome10+,Safari5.1+ */
-    
+
     background: -o-linear-gradient(top, rgba(209, 210, 211, 1) 0%, rgba(242, 243, 244, 1) 29%, rgba(242, 243, 244, 1) 67%, rgba(227, 229, 231, 1) 100%);
     /* Opera 11.10+ */
-    
+
     background: -ms-linear-gradient(top, rgba(209, 210, 211, 1) 0%, rgba(242, 243, 244, 1) 29%, rgba(242, 243, 244, 1) 67%, rgba(227, 229, 231, 1) 100%);
     /* IE10+ */
-    
+
     background: linear-gradient(to bottom, rgba(209, 210, 211, 1) 0%, rgba(242, 243, 244, 1) 29%, rgba(242, 243, 244, 1) 67%, rgba(227, 229, 231, 1) 100%);
     /* W3C */
-    
+
     filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#d1d2d3', endColorstr='#e3e5e7', GradientType=0);
     /* IE6-9 */
 }
@@ -142,35 +142,30 @@ body {
 }
 .suresitesLogo {
     background:url(img/suresites.png) no-repeat top left;
-    width: 110px;
-    height: 90px;
-    float:left;
+    width: 65px;
+    height: 50px;
+    position: absolute;
+    left: 20px;
+    top: 50%;
+    margin-top: -25px;
 }
-.contact {
-    background-color: #000;
-    color: #fff;
-    height: 122px;
-    padding: 10px;
-    width: 220px;
-    position: relative;
-}
-.suresites p {
-    text-align: center;
-    margin: 5px 0 0 0;
-}
-.contact span {
-    color: #5AA7AB;
-}
-.contact img {
+.expertLogo {
+    background:url(img/expert.png) no-repeat top left;
+    width: 81px;
+    height: 40px;
     top: 50%;
     margin-top: -20px;
     position: absolute;
+    right: 20px;
+    color: #fff;
 }
-.contact p {
-    top: 50%;
-    position: absolute;
-    right: 10px;
-    margin-top: -22px;
+.contact {
+    background-color: #BBBDC0;
+    height: 122px;
+    padding: 10px;
+    width: 225px;
+    position: relative;
+    margin-right: 3px;
 }
 
 /* Spinner */
@@ -235,7 +230,7 @@ h4.transportation {
     background-color: #AD6F29;
 }
 .utilities ul,
-.utilities>button, 
+.utilities>button,
 h4.utilities {
     background-color: #0C5D63;
 }
@@ -338,7 +333,7 @@ h4.demographics {
 .clearfix:before, .clearfix:after {
     content: " ";
     /* 1 */
-    
+
     display: table;
     /* 2 */
 }
@@ -382,8 +377,7 @@ h4.demographics {
     .app .map .esriSimpleSlider {
         top: 80px;
     }
-    #header-container .contact,
-    #header-container .suresites {
+    #header-container .contact {
         display: none;
         visibility: hidden;
     }
@@ -391,15 +385,7 @@ h4.demographics {
         visibility: visible !important;
         display: block !important;
         width: 100%;
-        height: auto;
-    }
-    #footer-wrapper .contact p {
-        position: inherit;
-        margin: 0 10px;
-    }
-    #footer-wrapper .suresitesLogo {
-        visibility: visible !important;
-        display: block !important;
+        height: 72px;
     }
 }
 @media only screen and (max-width: 600px) {
@@ -409,7 +395,7 @@ h4.demographics {
         visibility: hidden;
         display: none;
     }
-    
+
     #header-container {
         margin-top: 0;
     }
