--- a/src/app/resources/Layer.css
+++ b/src/app/resources/Layer.css
@@ -25,28 +25,28 @@
 .layer div[data-toggle='tooltip'] {
     display: inline;
 }
-.legend td {
-    padding: 5px;
+.layer .legend td {
+    padding: 3px;
 }
-.legend .short {
+.layer .legend .short {
     background-color: #7F7F84;
     border-top-left-radius: 2px;
     border-top-right-radius: 2px;
 }
-.legend .custom {
+.layer .legend .custom {
     background-color: #9F9FA2;
     border-bottom-left-radius: 2px;
     border-bottom-right-radius: 2px;
 }
-.tooltip.in {
+.layer .tooltip.in {
     opacity: 1 !important;
     filter: alpha(opacity=100) !important;
 }
-.tooltip .tooltip-inner {
+.layer .tooltip .tooltip-inner {
     background-color: #fff;
     padding: 3px;
 }
-.tooltip.in .tooltip-arrow {
+.layer .tooltip.in .tooltip-arrow {
     border-right-color: #fff !important;
 }
 
