hide footer contact info

--- a/src/app/templates/App.html
+++ b/src/app/templates/App.html
@@ -30,7 +30,7 @@
     </div>
 
     <div id="footer-wrapper" class="site-full">
-        <div class='contact'>
+        <div class='contact hidden'>
             <a href='http://utahsuresites.com' class='suresitesLogo ir' target="_blank">Sure Sites</a>
             <a href='tel:801-538-8831' class='expertLogo ir'
             title='801-538-8831'>Ask An Expert!</a>
