--- a/src/app/resources/Layer.css
+++ b/src/app/resources/Layer.css
@@ -42,12 +42,8 @@
     opacity: 1 !important;
     filter: alpha(opacity=100) !important;
 }
-.layer .tooltip .tooltip-inner {
-    background-color: #fff;
+.broadband .layer .tooltip .tooltip-inner {
     padding: 3px;
-}
-.layer .tooltip.in .tooltip-arrow {
-    border-right-color: #fff !important;
 }
 
 .esriPopup .content .contentPane {
