Link logo on report back to home page.
Closes #61

--- a/src/app/templates/Report.html
+++ b/src/app/templates/Report.html
@@ -2,7 +2,7 @@
     <div id="header-container" class="site-full">
         <div id="header-wrapper" class="site-full">
             <div id="header" class="site">
-                <span id="broadband-logo" class="ir"></span>
+                <a href='./' id="broadband-logo" class="ir"></a>
             </div>
         </div>
     </div>
