--- a/src/app/templates/ReportTemplate.html
+++ b/src/app/templates/ReportTemplate.html
@@ -4,26 +4,26 @@
 <div id="broadband" class='collapse in'>
     <h4 class='broadband'>Fiber Providers</h4>
     <div class="table-responsive">
-        <table class='table table-striped'>
+        <table class='table table-striped table-condensed table-hover'>
             <thead>
                 <tr>
-                    <th>Provider</th>
-                    <th>Web Site</th>
+                    <th class='provider'>Provider</th>
+                    <th class='url'>Web Site</th>
                     <th>Providing Fiber in:</th>
-                    <th>Contact Name</th>
-                    <th>Contact Phone</th>
-                    <th>Contact Email</th>
+                    <th class='contact-fld'>Contact Name</th>
+                    <th class='contact-fld'>Contact Phone</th>
+                    <th class='contact-fld'>Contact Email</th>
                 </tr>
             </thead>
             <tbody>
                 {{#each broadband.fiber}}
                 <tr>
-                    <td>{{Colloquial}}</td>
-                    <td><a href="{{URL}}">{{URL}}</a></td>
+                    <td class='provider'>{{Colloquial}}</td>
+                    <td class='url'><a href="{{URL}}">{{URL}}</a></td>
                     <td>{{ServiceClass}}</td>
-                    <td>{{ContactName}}</td>
-                    <td>{{ContactPhone}}</td>
-                    <td><a href='mailto:{{ContactEmail}}'>{{ContactEmail}}</a></td>
+                    <td class='contact-fld'>{{ContactName}}</td>
+                    <td class='contact-fld'>{{ContactPhone}}</td>
+                    <td class='contact-fld'><a href='mailto:{{ContactEmail}}'>{{ContactEmail}}</a></td>
                 </tr>
                 {{/each}}
             </tbody>
@@ -31,24 +31,26 @@
     </div>
     <h4 class="broadband">Other Fixed Broadband Providers</h4>
     <div class="table-responsive">
-        <table class='table table-striped'>
+        <table class='table table-striped table-condensed table-hover'>
             <thead>
                 <tr>
-                    <th>Provider</th>
-                    <th>Web Site</th>
-                    <th>Contact Name</th>
-                    <th>Contact Phone</th>
-                    <th>Contact Email</th>
+                    <th class='provider'>Provider</th>
+                    <th class='url'>Web Site</th>
+                    <th></th>
+                    <th class='contact-fld'>Contact Name</th>
+                    <th class='contact-fld'>Contact Phone</th>
+                    <th class='contact-fld'>Contact Email</th>
                 </tr>
             </thead>
             <tbody>
                 {{#each broadband.fixed}}
                 <tr>
-                    <td>{{Colloquial}}</td>
-                    <td><a href="{{URL}}">{{URL}}</a></td>
-                    <td>{{ContactName}}</td>
-                    <td>{{ContactPhone}}</td>
-                    <td><a mailto:'{{ContactEmail}}'>{{ContactEmail}}</a></td>
+                    <td class='provider'>{{Colloquial}}</td>
+                    <td class='url'><a href="{{URL}}">{{URL}}</a></td>
+                    <td></td>
+                    <td class='contact-fld'>{{ContactName}}</td>
+                    <td class='contact-fld'>{{ContactPhone}}</td>
+                    <td class='contact-fld'><a mailto:'{{ContactEmail}}'>{{ContactEmail}}</a></td>
                 </tr>
                 {{/each}}
             </tbody>
@@ -62,17 +64,17 @@
 <div class="collapse" id="utilities">
     <h4 class="utilities">Local Exchange Areas</h4>
     <div class="table-responsive">
-        <table class='table table-striped'>
+        <table class='table table-striped table-condensed table-hover'>
             <thead>
                 <tr>
-                    <th>Provider</th>
+                    <th class='provider'>Provider</th>
                     <th>Web Site</th>
                 </tr>
             </thead>
             <tbody>
                 {{#each utilities.rural}}
                 <tr>
-                    <td>{{PROVIDER}}</td>
+                    <td class='provider'>{{PROVIDER}}</td>
                     <td><a href="#">{{WEBLINK}}</a></td>
                 </tr>
                 {{/each}}
@@ -81,17 +83,17 @@
     </div>
     <h4 class="utilities">Electric Utility Territory</h4>
     <div class="table-responsive">
-        <table class='table table-striped'>
+        <table class='table table-striped table-condensed table-hover'>
             <thead>
                 <tr>
-                    <th>Provider</th>
+                    <th class='provider'>Provider</th>
                     <th>Web Site</th>
                 </tr>
             </thead>
             <tbody>
                 {{#each utilities.electrical}}
                 <tr>
-                    <td>{{PROVIDER}}</td>
+                    <td class='provider'>{{PROVIDER}}</td>
                     <td><a href="#">{{WEBLINK}}</a></td>
                 </tr>
                 {{/each}}
@@ -99,7 +101,7 @@
         </table>
     </div>
     <div class="table-responsive">
-        <table class='table table-striped'>
+        <table class='table table-striped table-condensed table-hover'>
             <tbody>
                 <td>
                     Natural gas service:
@@ -122,7 +124,7 @@
 <div id="transportation" class="collapse">
     <h4 class="transportation">Major Roads, Freeways, US Highways and State Highways within 1 Mile</h4>
     <div class="table-responsive">
-        <table class='table table-striped'>
+        <table class='table table-striped table-condensed table-hover'>
             <thead>
                 <tr>
                     <th>Name</th>
@@ -140,7 +142,7 @@
 
     <h4 class="transportation">Airports - International</h4>
     <div class="table-responsive">
-        <table class='table table-striped'>
+        <table class='table table-striped table-condensed table-hover half'>
             <thead>
                 <tr>
                     <th>Name</th>
@@ -158,7 +160,7 @@
 
     <h4 class="transportation">Airports - Regional/Commercial</h4>
     <div class="table-responsive">
-        <table class='table table-striped'>
+        <table class='table table-striped table-condensed table-hover half'>
             <thead>
                 <tr>
                     <th>Name</th>
@@ -178,7 +180,7 @@
 
     <h4 class="transportation">Airports - Local</h4>
     <div class="table-responsive">
-        <table class='table table-striped'>
+        <table class='table table-striped table-condensed table-hover half'>
             <thead>
                 <tr>
                     <th>Name</th>
@@ -203,7 +205,7 @@
 <div id="demographics" class="collapse">
     <h4 class="demographics">Higher Education Schools</h4>
     <div class="table-responsive">
-        <table class='table table-striped'>
+        <table class='table table-striped table-condensed table-hover half'>
             <thead>
                 <tr>
                     <th>Name</th>
@@ -223,7 +225,7 @@
 
     <h4 class="demographics">Top 10 County Industries</h4>
     <div class="table-responsive">
-        <table class="table table-striped">
+        <table class="table table-striped table-condensed table-hover">
             <tbody>
                 {{#each workforce.county_demographics.topten}}
                 <tr>
@@ -237,7 +239,7 @@
 
     <h4 class="demographics">County Demographics</h4>
     <div class="table-responsive">
-        <table class="table table-striped">
+        <table class="table table-striped table-condensed table-hover half">
             <tbody>
                 <tr>
                     <td>Median Age</td>
@@ -264,7 +266,7 @@
     </div>
 
     <!-- <div class="table-responsive">
-        <table class="table table-striped">
+        <table class="table table-striped table-condensed table-hover">
             <tbody>
                 <tr>
                     <td>Within an enterprise zone?
@@ -288,7 +290,7 @@
 <div id="lifestyle" class="collapse">
     <h4 class="lifestyle">National Parks</h4>
     <div class="table-responsive">
-        <table class='table table-striped'>
+        <table class='table table-striped table-condensed table-hover half'>
             <thead>
                 <tr>
                     <th>Name</th>
@@ -308,7 +310,7 @@
 
     <h4 class="lifestyle">State Parks</h4>
     <div class="table-responsive">
-        <table class='table table-striped'>
+        <table class='table table-striped table-condensed table-hover half'>
             <thead>
                 <tr>
                     <th>Name</th>
@@ -327,7 +329,7 @@
     </div>
     <h4 class="lifestyle">Ski Resorts</h4>
     <div class="table-responsive">
-        <table class='table table-striped'>
+        <table class='table table-striped table-condensed table-hover half'>
             <thead>
                 <tr>
                     <th>Name</th>
