--- a/src/app/templates/App.html
+++ b/src/app/templates/App.html
@@ -13,7 +13,9 @@
                 <div class='contact pull-right'>
                     <a href='http://utahsuresites.com' class='suresitesLogo ir' target="_blank">Sure Sites</a>
                     <a href='tel:801-538-8831' class='expertLogo ir'
-                        title='801-538-8831'>Ask An Expert!</a>
+                        title='Technical Questions: (801) 538-8831 <br> Economic Development Assistance: (801) 328-8839'
+                        data-placement='bottom'
+                        data-html='true'>Ask An Expert!</a>
                 </div>
             </div>
         </div>
@@ -33,7 +35,8 @@
         <div class='contact hidden'>
             <a href='http://utahsuresites.com' class='suresitesLogo ir' target="_blank">Sure Sites</a>
             <a href='tel:801-538-8831' class='expertLogo ir'
-            title='801-538-8831'>Ask An Expert!</a>
+                title='Technical Questions: (801) 538-8831 <br> Economic Development Assistance: (801) 328-8839'
+                data-html='true'>Ask An Expert!</a>
         </div>
         <div id="footer" class="site">
             <a href="http://edcutah.org" id="edcLogo" class="ir" target='_blank'>Economic Development Corporation of Utah</a>
