--- a/src/app/templates/App.html
+++ b/src/app/templates/App.html
@@ -21,13 +21,10 @@
         </div>
     </div>
 
-    <div class="site-full clearfix">
+    <div class="site-full clearfix center">
         <div class="site-full" data-dojo-attach-point='mapContainer'>
             <div data-dojo-attach-point="mapDiv" class='map'></div>
-            <div class="site">
-                <div data-dojo-attach-point='layersDiv' class='layers'></div>
-                <div class="clearfix hidden"></div>
-            </div>
+            <div data-dojo-attach-point='layersDiv' class='layers'></div>
         </div>
     </div>
 
