--- a/src/app/templates/Layers.html
+++ b/src/app/templates/Layers.html
@@ -1,4 +1,6 @@
 <div>
     <div data-dojo-attach-point="searchDiv"></div>
-    <ul data-dojo-attach-point='groupsContainer'></ul>
+    <div class="scroller">
+        <ul data-dojo-attach-point='groupsContainer'></ul>
+    </div>
 </div>
