--- a/src/app/resources/App.css
+++ b/src/app/resources/App.css
@@ -4,19 +4,37 @@
 @import '../../agrc/resources/map/BaseMapSelector.css';
 @import '../../dijit/themes/claro/claro.css';
 
-.map {
-    top: 0;
+html, body, .app, .center>.site-full {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+body {
+    font-size: 16px;
+    line-height: 1.4;
+    font-family: sans-serif;
+}
+.app .site-full.clearfix.center {
+    top: 122px;
     left: 0;
-    bottom: 0;
+    bottom: 110px;
     right: 0;
+    position: absolute;
+}
+#footer-wrapper {
+    position: absolute;
+    bottom: 0;
+}
+.app .map {
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
     position: absolute;
 }
 .esriControlsBR {
     right: 0;
     bottom: 0;
-}
-.app {
-    position: relative;
 }
 .app .map .selectorMain {
     left: 50px;
@@ -24,11 +42,6 @@
 }
 a, a:visited {
     text-decoration: none;
-}
-body {
-    font-size: 16px;
-    line-height: 1.4;
-    font-family: sans-serif;
 }
 .popover-title button.close {
     margin-top: -4px;
@@ -44,7 +57,6 @@ body {
 }
 .layers, .current-location {
     background-color: #454E56;
-    float: right;
     padding: 10px;
     color: #fff;
 }
