--- a/src/app/resources/Layer.css
+++ b/src/app/resources/Layer.css
@@ -73,7 +73,7 @@
 .layer.checkbox label,
 .layer.radio label {
     padding-left: 5px;
-    width: 250px;
+    max-width: 225px;
 }
 .layer.checkbox input[type='checkbox'],
 .layer.radio input[type='radio'] {
