--- a/src/app/resources/Layers.css
+++ b/src/app/resources/Layers.css
@@ -1,14 +1,27 @@
 .layers {
     border-radius: 10px;
     box-shadow: 3px 3px 5px rgba( 0, 0, 0, .6);
-    margin: 40px 0;
+    margin: 20px 0 40px 0;
     width: 320px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
 }
 .layers ul {
     margin: 0;
     padding: 0;
     list-style: none;
     font-weight: normal;
+}
+.layers .scroller {
+    margin: 10px;
+    overflow-y: auto;
+    position: absolute;
+    top: 142px;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 
 @media only screen and (max-width: 600px) {
